included Data folder files in RaidLog.csproj

--- a/RaidLog.csproj
+++ b/RaidLog.csproj
@@ -6,5 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <!-- <Nullable>enable</Nullable> -->
   </PropertyGroup>
+  <ItemGroup>
+      <None Update="Data\RAID20240425.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Data\TT2MasterAppExport.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 
 </Project>
